     dereferenced into real URLs.  This is a generalization and cleanup of
     the lp: transport lookup.  (Aaron Bentley)

   * Merge directives that are automatically attached to emails have nicer
     filenames, based on branch-nick + revno. (Aaron Bentley)

  BUGFIXES:

    * Disable plink's interactive prompt for password.
      (#107593, Dmitry Vasiliev)

    * Include quick-start-summary.svg file to python-based installer(s)
      for Windows. (#192924, Alexander Belchenko)

    * lca merge now respects specified files. (Aaron Bentley)

    * Make version-info --custom imply --all. (#195560, James Westby)

    * ``merge --preview`` now works for merges that add or modify
      symlinks (James Henstridge)

    * Redirecting the output from ``bzr merge`` (when the remembered
      location is used) now works. (John Arbash Meinel)

    * Upgrade bundled ConfigObj to version 4.5.2, which properly quotes #
      signs, among other small improvements. (Matt Nordhoff, #86838)

    * Use correct indices when emitting LCA conflicts.  This fixes IndexError
      errors.  (Aaron Bentley, #196780)

  API BREAKS:

    * Support for loading plugins from zip files and
      ``bzrlib.plugin.load_from_zip()`` function are deprecated.
      (Alexander Belchenko)

  TESTING:

    * The branch interface tests were invalid for branches using rich-root
      repositories because the empty string is not a valid file-id.
      (Robert Collins)

  INTERNALS:

    * Autopacking no longer holds the full set of inventory lines in
      memory while copying. For large repositories, this can amount to
      hundreds of MB of ram consumption.
      (Ian Clatworthy, John Arbash Meinel)

    * New module ``tools/package_mf.py`` provide custom module finder for
      python packages (improves standard python library's modulefinder.py)
      used by ``setup.py`` script while building standalone bzr.exe.
      (Alexander Belchenko)
